# he-quality-assessment

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: install-smoke-test.yml
configs/splits/: sr040_seed42_split.json
docs/: change_report.md  recovered_workflow.md
models/qc/: README.md  checkpoint.pt  model_manifest.json  scaler.joblib  selection.json
scripts/: build_test_report.py  he_quality.py
src/ebme398_artifact_detection/: __init__.py  alignment.py  cli.py  doctor.py  fusion.py  handcrafted.py  infer.py  labels.py  metrics.py  model_bundle.py  paths.py  presets.py  qc_outputs.py  selection.py  tiles.py  train_sklearn.py  train_torch.py  trident.py  trident_runner.py
tests/: test_alignment.py  test_cli.py  test_doctor.py  test_infer.py  test_labels.py  test_model_bundle.py  test_presets.py  test_qc_outputs.py  test_selection.py
